Added scoring functionality to DOM

--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,12 @@
 </head>
 
 <body>
-
+  <div class="score">
+    <h1 id="player">Player: 0</h1>
+    <h1 id="bot">Bot: 0</h1>
+  </div>
   <div class="container">
-    <h1>Select a Weapon</h1>
+    <h1 class="select-weapon">Select a Weapon</h1>
     <div class="weapons">
       <div class="holder">
         <img src="./images/icons8-rock-100.png" alt="" id="rock">
@@ -27,7 +30,7 @@
     <div class="player-weapon">
       <img src="./images/icons8-rock-100.png" alt="" id="pw">
     </div>
-    <h1>VS</h1>
+    <h1 class="select-weapon">VS</h1>
     <h1 id="loading"></h1>
     <div class="enemy-weapon">
       <img src="" alt="" id="ew">
